# MyPyDb_test

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py  test_pypi_token.txt
src/mypydb_gurgy11.egg-info/: PKG-INFO  SOURCES.txt
