[metadata]
name = mypydb_gurgy11
version = 0.0.1
author = Gregory Bockus
author_email = gregory.bockus@gmail.com
description = A small package to help manage a MySQL database.
long_description = file: README.md
long_description_content_type =text/markdown
url = https://github.com/gurgy11/mypydb
project_urls =
	Bug Tracker = https://github.com/gurgy11/mypydb/issues
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
license = "GNU General Public License"

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find] *
where = src